--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/ShahidAkhtar777/What_A_Trip#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "vis-network": "^9.0.4"
+    "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   }
 }
