added build script in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A travel planner for visiting cities",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm i",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
